# 100-exercises-to-learn-rust

./: Cargo.toml
.devcontainer/: devcontainer.json
exercises/01_intro/01_syntax/src/: lib.rs
exercises/02_basic_calculator/01_integers/src/: lib.rs
exercises/02_basic_calculator/02_variables/src/: lib.rs
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/08_overflow/: Cargo.toml
exercises/02_basic_calculator/09_saturating/src/: lib.rs
exercises/02_basic_calculator/10_as_casting/src/: lib.rs
exercises/03_ticket_v1/00_intro/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/03_modules/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/06_ownership/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/08_stack/src/: lib.rs
exercises/03_ticket_v1/09_heap/src/: lib.rs
exercises/03_ticket_v1/10_references_in_memory/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/14_outro/: core
exercises/05_ticket_v2/: memo.md
exercises/05_ticket_v2/11_dependencies/: Cargo.toml
exercises/05_ticket_v2/12_thiserror/: Cargo.toml
(+24 files in other folders)
