[package]
name = "overflow"
version = "0.1.0"
edition = "2021"

# オーバーフローのチェックを無効化する場合は、以下の設定を追加します。
# ただし、この設定はデバッグビルドのみに適用されます。
# 実務的にはパフォーマンスに問題がない限り、オーバーフローのチェックを有効にしておくことが望ましいです。
# これは、オーバーフローが発生した場合に、そのことに気づかずにバグを生みやすくなるためです。
# もし、オーバーフローを起こす必要がある場合は、wrapping_addなどwrapperメソッドを使うことで、
# オーバーフローを明示的に許可することができます。
# それ以外にも、オーバーフローを制御するメソッドが用意されている。
# 参考: https://qiita.com/garkimasera/items/c5e06de1a7c66aa7652a
[profile.dev]
overflow-checks = false
